--- a/index.html
+++ b/index.html
@@ -12,39 +12,39 @@
         <div class="container">
             <footer class="bg-[#659f8f] dark:bg-[#313131]">
                 <div class="container px-6 py-12 mx-auto">
-                    <div class="grid">
+                    <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 sm:gap-y-10 lg:grid-cols-4">
                         <div class="sm:col-span-2">
-                            <h1 class="max-w-lg" >Subscribe.</h1>
-                            <div class="flex">
-                                <input id="email" type="text">
-                                <button class="w-full px-6 py-2.5 bg-white">
-                                    Subscribe
-                                </button>
+                            <h1 class="max-w-lg text-xl font-semibold tracking-tight text-[#313131] xl:text-2xl dark:text-white"> Subscribe to our newsletter for updates.    
+                            </h1>
+                            <div class="flex flex-col mx-auto mt-6 space-y-3 md:space-y-0 md:flex-row">
+                                <input class="px-4 py-2 text-[#313131] bg-white border rounded-md dark:bg-[#313131] dark:text-white dark:border-[#313131] focus:border-[#d86943] dark:focus:border-[#d86943] focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-[#d86943]"" id="email" type="text">
+                                <button class="px-3 py-2 text-[#fefdfd] bg-orange-600 border rounded-md hover:after hover:focus hover:bg-slate-600">Subcribe     
+                                </button>    
                             </div>
                         </div>
                         <div>
-                            <p class="text-[#313131]">Quick Link</p>
-                            <div class="flex">
-                                <a href="#">Home</a>
-                                <a href="#">Who We Are</a>
-                                <a href="#">Our Philosophy</a>
+                            <p class="font-bold text-[#313131]">Quick link </p>
+                            <div class="flex flex-col mx-auto mt-6 space-y-3">
+                                <a class="font-thin hover:font-medium" href="https://www.codespace.co.za/">Home</a>
+                                <a class="font-thin hover:font-medium" href="https://www.codespace.co.za/">Who we are</a>
+                                <a class="font-thin hover:font-medium" href="https://www.codespace.co.za/">Our Philosophy</a>
                             </div>
                         </div>
                         <div>
-                            <p class="text-[#313131]">Technologies</p>
-                            <div class="">
-                                <a href="#">HTML</a>
-                                <a href="#">CSS</a>
-                                <a href="#">JavaScript</a>
+                            <p class="font-bold text-[#313131]">Technologies</p>
+                            <div class="flex flex-col mx-auto mt-6">
+                                <a class="font-thin hover:font-medium" href="https://www.codespace.co.za/programs/software-development/">HTML</a>
+                                <a class="font-thin hover:font-medium" href="https://www.codespace.co.za/programs/software-development/">CSS</a>
+                                <a class="font-thin hover:font-medium" href="https://www.codespace.co.za/programs/javascript-engineering/">JavaScript</a>
                             </div>
                         </div>
                     </div>
                     
-                    <hr class="my-6 border-[#d86943]">
+                    <hr class="my-8 border-[#d86943]">
                     
-                    <div class="flex">
+                    <div class="flex items-center justify-between">
                         <a href="#">
-                            <img class="w-auto h-7" src="https://codespace-assets.global.ssl.fastly.net/wp/assets/website/codespace-primary-logo-light.svg" alt="">
+                            <img class="w-auto h-5" src="https://codespace-assets.global.ssl.fastly.net/wp/assets/website/codespace-primary-logo-light.svg" alt="">
                         </a>
                     </div>
     </footer>
